--- a/.github/workflows/func-sf-d365-omnisync-product-update-01.yml
+++ b/.github/workflows/func-sf-d365-omnisync-product-update-01.yml
@@ -36,12 +36,11 @@ jobs:
           dotnet build --configuration Release --output ./output
           popd
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_9DD430CB8DD6489790E1BB2EECBE3C96 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_3BA55237CFB34686850FB36008439C17 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_62E7CF4303554290B10FB46AA53D8C8E }}
+       - name: 'Login via Azure CLI'
+         uses: azure/login@v2
+         with:
+           creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
+
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
